--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imot-bg-new-ads",
   "version": "1.0.0",
-  "description": "Fixes the sort order by date added and returns only newly added ads on imot.bg",
+  "description": "Console app to extract new ads from imot.bg",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
